--- a/src/components/search-box/search-box.style.css
+++ b/src/components/search-box/search-box.style.css
@@ -5,4 +5,7 @@
     width: 150px;
     line-height: 30px;
     margin-bottom: 30px;
+    
+    font-family: 'Fira Sans', sans-serif;
+    font-size: large;
 }
