--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   
   background: linear-gradient(
+    to left,
     #E0B0FF,
     #D185C1
-    
   );
 }
 
